--- a/design-pattern/pom.xml
+++ b/design-pattern/pom.xml
@@ -27,7 +27,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.1.4.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+            <version>2.1.4.RELEASE</version>
+        </dependency>
 
     </dependencies>
 </project>
