--- a/design-pattern/pom.xml
+++ b/design-pattern/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
             <version>2.1.4.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
 
     </dependencies>
 </project>
