--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,17 @@
     <modules>
         <module>design-pattern</module>
         <module>algorithm</module>
+        <module>3-distribution</module>
+        <module>rpc-server</module>
+        <module>rpc-client</module>
     </modules>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.74</version>
+        </dependency>
+    </dependencies>
 
 </project>
