rpc,序列化,多线程

--- a/3-distribution/pom.xml
+++ b/3-distribution/pom.xml
@@ -10,6 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>3-distribution</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>multi-thread</module>
+    </modules>
 
     <dependencies>
 
